# CSNotes

./: .dir-locals.el  .gitignore  .gitmodules  AGENTS.md  CP_summaries.org  CV_summaries.org  EE_summaries.org  LWN.org  ML_summaries.org  Makefile  TLDP.md  TODO.org  TODO_List.md  algorithm_summaries.org  cloud_summaries.org  compiler_summaries.org  computer_org_summaries.org  corejava1.md  database_summaries.org  desktop_summaries.org  generate_html.sh  industrial_control_summaries.org  lang_summaries.org  math_summaries.org  net_summaries.org  numpy.md  numpy.org  os_summaries.org  pandas.org  prog_summaries.org  python_regex.md  ref.bib  resources_summaries.org  robotics_summaries.org  security_summaries.org  setup.el  sidebar.css  software_summaries.org  spacemacs  summary.md  (+6 more)
.opencode/: LWN-Processing-Guide.md
.opencode/context/: lwn-processing-context.md
CP/: TODO_Problems.md  guide_to_CP.org  intro.md  intro.org  problem_solving_paradigm.org
CP/code/: .ccls  .dir-locals.el  compile_flags.txt
CV/: CV-1.lyx  CV-1.md  Gonzales Part 1.org  Gonzales_Part_1.md  Gonzales_Part_1.org  Gonzales_Part_2.md  Gonzales_Part_3.md  Gonzales_Part_4.md  Multi-Geo_CV.lyx
EE/: PLC.org  basic_components.org  circuits.org  digital_design.org  qemu.org
EE/embedded/: 51.md
LWN/: LWN_index.org  LWN_part_00.org  LWN_part_01.org  LWN_part_02.org  LWN_part_03.org  LWN_part_04.org  LWN_part_05.org  LWN_part_06.org  LWN_part_07.org  LWN_part_08.org  LWN_part_09.org  filter_articles.sh  load_article_urls.sh  load_bigpages.sh
ML/: PR.lyx  PR.md  PRML Part 1.lyx  PRML Part 1.md  advanced_concepts.org  basic_concepts.org  idioms.org  links_notes.md  ncnn.org
ML/PRintro_matlab_python/: perceptron.py
ML/mxnet/: MobileNetV2.py  ResNeXt.py  SNN_base.py  VGG16.py  crop_and_test.py  demo_yolo.py  generate_target_crops.py  mxSNN.py  mxnet_scratchpad.py  prepare_caltech.py  toySSD.py  train_ssd.py  train_yolo3.py  train_yolo3.sh  train_yolo3_pet.ipynb  yolo.ipynb  yolov3.py
ML/papers/: AlexNet.md  Inception.md  Inception_v2_Batch_Normalization.org  Inception_v3.org  (+22 more)
c/: c_cpp_inline_mud.md  c_std.md  idioms.md
cloud/: distributed.org  docker.org
compiler/: optimization.org  relocation.org
computer_org/: ISA.org  arithmetics.org  computer_organization.md  computer_organization.org  intro.md  intro.org  python_matrix_multiply.py
cpp/: Functions.md  STL.md  a_tour_of_cpp.md  a_tour_of_std_library.md  abstract_containers.md  c_cpp_diff.md  container.md  cpp_concurrency.md  cpp_oop.md  exceptions.md  generics.md  io_stream_library.md  named_requirements.md  namespaces.md  operator_overloading.md  reference.md  some_issues_about_ccls.md  templates.md  type_traits.md
csharp/: basics.md  csharp_oop.md
database/: ADO.NET.org  ANSI_ISO_Modern_SQL.org  CTE.org  MSSQL.org  ODBC.bib  ODBC_Programming.org  Oracle.bib  PLSQL.org  SQLAlchemy.org  SQL_General.org  TSQL.org  database_theory_guide.org  db2.md  db2.org  mariadb.org  mysql_mariadb.org  oracle.md  oracle_admin.org  oracle_arch.org  oracle_data_structure.org  redis_basics.org  relational_db_concepts.org  sqlite.md  window_functions.org
desktop/: vala.md  winforms.md  x.md
desktop/GTK/gtk_c/: CMakeLists.txt  MessageDialog.c  SimpleDialog.c  button.c  compile_flags.txt  entry.c  eventbox.c  exercise2.2.c  exercise3.1.c  exercise6.1.c  exercise6.2.c  expander.c  fixed.c  gtkbox.c  helloworld.c  iterator.c  notebook.c  open_dir.c  panes.c  radiobuttons.c  scrolledwindows.c  slice.c  tables.c  template.c  textview2.c  timeouts.c
desktop/Windows/win32GUI/: .ccls  CMakeLists.txt  MFC.org  ProgrammingWindows.org  compile_flags.txt  win32GUI.md  win32GUI.org
desktop/Windows/win32GUI/include/: utility.h
desktop/Windows/win32GUI/src/: CPUSpeed.c  ColorDialog.c  DiskSpace.c  Drivename.c  FileDialog.c  Hotkey.c  LocalTime.c  MemoryStatus.c  MenuWindow.c  MessageBox.c  ModelessDialog.c  MoreWindows.c  SimpleWindow.c  StaticText.c  WindowCentering.c  computerName.c  cwd.c  lockworkstation.c  screensize.c  username.c  utility.c  wconsole.c  winmain_ex.c  winver.c
industrial_control/: opc.org  opc.security.org  opc.services.org  opcda_dcom.org  opcua.AddressSpace.org  opcua.org
java/: BigNumbers.md  android_dev.md  java_collections.md  java_concurrency.md  java_containers.md  java_gui.md  java_interfaces.md  java_io.md  java_streams.md  java_string.md  java_time_date.md
lang/: pwsh.org  random_programming_tools.org  tricks.org  vb_classic.org
lisp/: ansi_common_lisp.md
math/: Mathematica_SageMath.org
net/: OpenVPN.org  TAP_TUN.org  TLS_SSL.org  Tcp.org  client.c  data_link_layer.md  data_link_layer.org  ftp.org  network_layer.md  ntp.org  overview.md  physical_layer.org  privoxy.org  sock_server.c  software.md  transport_layer.md
os/: APUE.md  concurrency.org
os/windows/WinAPI/win32/: CMakeLists.txt  compile_commands.json  compile_flags.txt
os/windows/WinAPI/win32/lib/include/: errors.h  processes.h
os/windows/WinAPI/win32/src/: CreateProcess.cpp  ProcessIdentity.cpp  ReportError.c  cmdargs.cpp  cpW.c  errors.cpp  processes.cpp  processes.hpp  utf_cvt.cpp
os/windows/WinAPI/win32/toolchains/: mingw-x86_64.cmake
prog/: coding_style.org  codingstyle.bib  concurrency.org  design_pattern.org  function_programming_in_java.org  functional_programming.md  functional_programming.org
python/: Python_OOP.md  containers_iterators.md  context_manager.md  intermediate_python.md  koans_nots.md  python_IO.md  python_XML.md  python_builtin.md  python_datetime.md  python_execution_model.md  python_http.md  python_lexical_analysis.md  python_modules_packages.md  python_regex.md  python_serialization.md  python_special_methods.md  python_unittest.md
resources/: root.bib  root.json
robotics/: ros.org
rustlang/: rstbook.md
security/: PGP.org  cryptography.org  oauth_openid.org  spectre_meltdown.org
shell/: ABS.md
software/: CleanArchitecture.org  MVC.org  SOLID.org  design.org  design_flow.org  performance_tuning.org
theory/: uuid_guid.org
tools/: addpdfmarks.py  programming_without_ide.org  tmux.org  troff.org  troff.roff
(+861 files in other folders)
